# ollama-chat-iced

./: .gitignore  .webui_secret_key  Cargo.toml  README.md  chat.json  output.txt
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: data.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/data/: mod.rs  versions.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/audio/: mod.rs
crates/common/src/data/: mod.rs
crates/iced/: Cargo.toml
crates/iced/src/: main.rs  settings.rs  style.rs  utils.rs
crates/iced/src/pages/: auth.rs  info.rs  mod.rs  setup.rs
crates/iced/src/pages/home/: message.rs  sidebar.rs
crates/iced/src/pages/home/panes/: data.rs  mod.rs
crates/iced/src/pages/home/panes/view/: call.rs  chat.rs  mod.rs  models.rs  options.rs  prompts.rs  pulls.rs  settings.rs
crates/iced/src/pages/home/panes/view/editor/: message.rs  mod.rs
crates/iced/src/subscriptions/: hf_pull.rs  message.rs  mod.rs  ollama_pull.rs  player.rs  recorder.rs
crates/iced/src/widgets/: drag.rs  dragzone.rs  mod.rs
crates/iced/src/windows/: message.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/app/: mod.rs
crates/server/src/backend/: errors.rs  mod.rs
crates/server/src/backend/chats/: messages.rs  mod.rs  previews.rs  route.rs
crates/server/src/backend/files/: mod.rs  route.rs
crates/server/src/backend/folders/: mod.rs
crates/server/src/backend/generation/: mod.rs  route.rs
crates/server/src/backend/generation/stt/: mod.rs
crates/server/src/backend/options/: mod.rs  relationships.rs  route.rs
crates/server/src/backend/prompts/: mod.rs
crates/server/src/backend/providers/: mod.rs  models.rs  route.rs
crates/server/src/backend/settings/: mod.rs
crates/server/src/backend/tools/: builtin.rs
crates/server/src/backend/user/: mod.rs  route.rs
crates/types/: Cargo.toml
crates/types/src/: chats.rs  folders.rs  lib.rs  options.rs  prompts.rs  providers.rs  settings.rs  surreal.rs  tools.rs  version.rs
crates/types/src/generation/: mod.rs  stt.rs  text.rs  tts.rs
gui/: Cargo.toml
gui/src/: llm.rs  main.rs  sound.rs  style.rs  utils.rs
gui/src/chats/: message.rs  mod.rs
gui/src/chats/chat/: mod.rs  view.rs
gui/src/data/: mod.rs  settings.rs  start.rs
gui/src/database/: mod.rs
gui/src/database/chats/: mod.rs
gui/src/helper/: chats.rs
gui/src/models/: message.rs  model.rs
gui/src/options/: convert.rs  mod.rs
gui/src/pages/: mod.rs  setup.rs
gui/src/pages/home/: message.rs  mod.rs  sidebar.rs
gui/src/pages/home/panes/: data.rs  mod.rs
gui/src/pages/home/panes/view/: chat.rs  mod.rs  models.rs  options.rs  prompts.rs  pulls.rs  settings.rs
gui/src/prompts/: message.rs  mod.rs
gui/src/settings/: view.rs
gui/src/sidebar/: chats.rs  mod.rs
gui/src/subscriptions/: hf_pull.rs  message.rs  mod.rs  ollama_pull.rs  pull.rs
gui/src/tools/: mod.rs  view.rs
gui/src/windows/: message.rs  mod.rs
gui/src/windows/panes/: message.rs  mod.rs  view.rs
iced/: Cargo.toml
iced/src/: main.rs  settings.rs  style.rs
iced/src/data/: mod.rs  settings.rs  versions.rs
iced/src/pages/: auth.rs  info.rs  setup.rs
iced/src/pages/home/: message.rs  mod.rs  sidebar.rs
iced/src/pages/home/panes/: data.rs  mod.rs
iced/src/pages/home/panes/view/: chat.rs  info.rs  mod.rs  models.rs  options.rs  prompts.rs  pulls.rs  settings.rs
iced/src/subscriptions/: hf_pull.rs  message.rs  mod.rs  ollama_pull.rs
iced/src/windows/: message.rs
server/: Cargo.toml
server/src/: errors.rs  lib.rs  main.rs  utils.rs
server/src/app/: mod.rs
server/src/backend/: errors.rs  mod.rs  utils.rs
server/src/backend/chats/: messages.rs  mod.rs  previews.rs  relationships.rs  route.rs
server/src/backend/files/: mod.rs
server/src/backend/folders/: mod.rs  route.rs
server/src/backend/generation/: mod.rs  route.rs
server/src/backend/generation/text/: api.rs  llamacpp.rs
server/src/backend/generation/tts/: stream.rs
server/src/backend/options/: mod.rs  relationships.rs
server/src/backend/prompts/: mod.rs  route.rs
server/src/backend/providers/: mod.rs  models.rs
server/src/backend/providers/hf/: text.rs
server/src/backend/providers/ollama/: mod.rs  models.rs  pull.rs
server/src/backend/settings/: mod.rs  route.rs
server/src/backend/user/: mod.rs
server/src/chats/: messages.rs  mod.rs  previews.rs  relationships.rs  route.rs
server/src/files/: mod.rs  route.rs
server/src/generation/: mod.rs  route.rs  text.rs
server/src/generation/speech/: mod.rs
server/src/generation/text/: api.rs  candle.rs  llamacpp.rs  mod.rs  stream.rs
server/src/generation/tts/: mod.rs  stream.rs
server/src/messages/: mod.rs
server/src/options/: mod.rs  relationships.rs  route.rs
server/src/prompts/: mod.rs  route.rs
server/src/providers/: mod.rs  models.rs  route.rs
server/src/providers/hf/: mod.rs  pull.rs  text.rs
server/src/providers/hf/text/: mod.rs  models.rs
server/src/providers/ollama/: models.rs  pull.rs
server/src/settings/: mod.rs  route.rs
server/src/user/: mod.rs  route.rs
src/: call.rs  chat.rs  chats.rs  common.rs  download.rs  llm.rs  main.rs  panes.rs  save.rs  sound.rs  style.rs  update.rs  utils.rs  view.rs
src/chats/: chat.rs  message.rs  mod.rs  view.rs
src/chats/chat/: mod.rs  view.rs
src/chats/tree/: mod.rs  view.rs
src/database/: mod.rs
src/helper/: chat.rs  chats.rs  image.rs  mod.rs
src/models/: message.rs  mod.rs  model.rs  view.rs
src/options/: convert.rs  doc.rs  message.rs  mod.rs  values.rs  view.rs
src/previews/: mod.rs
src/prompts/: message.rs  mod.rs  view.rs
src/providers/: mod.rs
src/save/: chat.rs  chats.rs  mod.rs
src/sidebar/: chat.rs  chats.rs  mod.rs
src/start/: mod.rs
src/tools/: builtin.rs  mod.rs
types/: Cargo.toml
types/src/: chats.rs  files.rs  folders.rs  lib.rs  options.rs  prompts.rs  providers.rs  settings.rs  surreal.rs  user.rs
types/src/generation/: text.rs  tts.rs
(+13 files in other folders)
