[package]
name = "ochat"
version = "0.3.8"
edition = "2021"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot application that uses Ollama AIs."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"

[features]
voice = ["dep:kalosm-sound", "dep:rodio", "sound"]
sound = ["dep:natural-tts"]

[dependencies]
ollama-rs = { version = "0.3.2", features = ["headers", "stream", "tool-implementations"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
text-splitter = "0.28.0"
tokio = { version = "1.48.0", features = ["full"] }
iced = { version = "0.13.1", features = ["tokio", "image", "markdown", "svg", "advanced", ]}
open = "5.3.2"
image = "0.25.8"
base64-stream = "4.0.0"
rfd = "0.15.4"
reqwest = "0.12.24"
regex = "1.12.2"
tantivy = "0.25.0"
thiserror = "2.0.17"
natural-tts = { version = "0.2.1", features = ["gtts", "tts-rs"], optional = true}
kalosm-sound = {version ="0.4.0", optional = true}
rodio = {version = "0.21.1", optional = true}
derive_builder = { version = "0.20.2"}
uuid = { version = "1.18.1", features = ["v4", "v7"] }
getset = "0.1.6"
clipboard-rs = "0.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
schemars = "1.1.0"
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }
