[workspace]
resolver = "2"
members = ["crates/cli", "crates/common", "crates/iced","crates/server", "crates/types"]

[patch.crates-io]
mistralrs.git = "https://github.com/EricLBuehler/mistral.rs.git"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
