[workspace]
resolver = "2"
members = ["crates/cli", "crates/common", "crates/iced","crates/server", "crates/types"]

[workspace.package]
version = "0.5.1"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot application that uses Ollama AIs."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"

[workspace.dependencies]
ochat-types = {path = "./crates/types", version = "0.5.1"}
ochat-common = {path = "./crates/common", version = "0.5.1"}

[patch.crates-io]
mistralrs.git = "https://github.com/EricLBuehler/mistral.rs.git"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
