[package]
name = "ochat-cli"
version = "0.5.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot cli that uses Ollama AIs."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rustyline = "17.0.2"
ochat-types = {path = "../types"}
tokio = { version = "1.48.0", features = ["full"] }
reqwest = {version = "0.12.24", features = ["json"]}
tabled = "0.20.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
