[package]
name = "ochat-common"
version = "0.5.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "Common functionality for frontend ochat apps."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"

[dependencies]
base64-stream = "4.0.0"
image = "0.25.8"
reqwest = {version = "0.12.24", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
ochat-types = {path = "../types"}
