[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64-stream = "4.0.0"
clipboard-rs = "0.3.1"
derive_builder = "0.20.2"
iced = { version = "0.13.1", features = ["tokio", "image", "markdown", "svg", "advanced",  "multi-window"] }
image = "0.25.8"
rand = "0.9.2"
reqwest = {version = "0.12.24", features = ["json"]}
rfd = "0.15.4"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
ochat-types = {path = "../types"}
