[package]
name = "ochat-iced"
version = "0.5.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot application that uses Ollama AIs."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"

[dependencies]
base64-stream = "4.0.0"
clipboard-rs = "0.3.1"
derive_builder = "0.20.2"
iced = { version = "0.14.0", features = ["tokio", "image", "markdown", "svg", "advanced", "sipper", "lazy"]}
image = "0.25.8"
rand = "0.9.2"
reqwest = {version = "0.12.24", features = ["json", "stream"]}
rfd = "0.15.4"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
ochat-types = {path = "../types"}
open = "5.3.2"
iced_split = "0.1.0"
