[package]
name = "ochat-server"
version = "0.5.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot server used for ochat."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"

[dependencies]
async-openai = "0.30.1"
axum = { version = "0.8.6", features = ["macros"] }
axum-streams = { version = "0.24.0", features = ["json"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "2.3.10", features = ["kv-rocksdb"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
