[package]
name = "ochat-server"
version = "0.5.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot server used for ochat."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"

[features]
voice = ["dep:kalosm-sound", "dep:rodio", "sound"]
sound = ["dep:natural-tts", "dep:text-splitter"]
python = ["dep:pyo3", "dep:pythonize"]
full = ["python", "voice"]

[dependencies]
async-openai = "0.30.1"
axum = { version = "0.8.6", features = ["macros"] }
axum-streams = { version = "0.24.0", features = ["json"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_json_lenient = "0.2.4"
surrealdb = { version = "2.4.0", features = ["kv-rocksdb"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
schemars = "1.1.0"
ochat-types = {path = "../types"}


# Python
pyo3 = { version = "0.27.1", features = ["auto-initialize"] , optional = true}
pythonize = {version = "0.27.0", optional = true}

# Voice
natural-tts = { version = "0.2.1", features = ["gtts", "tts-rs"], optional = true}
kalosm-sound = {version ="0.4.0", optional = true}
rodio = {version = "0.21.1", optional = true}
reqwest = "0.12.24"
text-splitter = {version = "0.28.0", optional = true}
