[package]
name = "ochat-types"
version = "0.1.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot server used for ochat."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
derive_builder = "0.20.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
