[package]
name = "ochat"
version = "0.5.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "A chatbot cli that uses Ollama AIs."
repository = "https://github.com/CodersCreative/ollama-chat-iced"
readme = "README.md"
publish = true
keywords = ["ai", "iced", "chat", "chatbot", "ollama"]
categories = ["gui", "accessibility"]
license = "MIT"


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ochat-types = {path = "../types"}
ochat-common = {path = "../common"}
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tabled = "0.20.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
indicatif = { version = "0.18.3", features = ["tokio"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
rustyline = "17.0.2"
