[package]
name = "ochat"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A chatbot cli that uses Ollama AIs."
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ochat-types = {workspace = true}
ochat-common = {workspace = true}
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tabled = "0.20.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
indicatif = { version = "0.18.3", features = ["tokio"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
rustyline = "17.0.2"
