[package]
name = "ochat-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common functionality for frontend ochat apps."
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
base64-stream = "4.0.0"
image = "0.25.8"
reqwest = {version = "0.12.24", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
ochat-types = {workspace = true}
