[package]
name = "ochat-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common functionality for frontend ochat apps."
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[features]
sound = ["dep:cpal", "dep:voice_activity_detector", "dep:audio-io", "dep:ort-sys"]
tray = ["dep:tray-icon"]
default = []

[dependencies]
futures = {version = "0.3.31"}
base64-stream = "4.0.0"
image = "0.25.8"
reqwest = {version = "0.12.24", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17"}
ochat-types = {workspace = true}
audio-io = {version="0.2.0", optional = true, features = ["all"]}
enigo = "0.6.1"
rdev = "0.5.3"
tray-icon = {version="0.21.3", optional = true}
voice_activity_detector = {version ="^0.1.0", features = ["async"], optional = true}
cpal = {version = "0.17.0", optional = true}
ort-sys = {version = "=2.0.0-rc.4", features = ["download-binaries"], optional = true}
