[package]
name = "ochat-iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A chatbot application that uses Ollama AIs."
publish.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[features]
sound = ["dep:cpal", "dep:voice_activity_detector"]
default = ["sound"]

[dependencies]
base64-stream = "4.0.0"
clipboard-rs = "0.3.1"
derive_builder = "0.20.2"
iced = { version = "0.14.0", features = ["tokio", "image", "markdown", "svg", "advanced", "sipper", "lazy"]}
image = "0.25.8"
rand = "0.9.2"
reqwest = {version = "0.12.24", features = ["json", "stream"]}
rfd = "0.15.4"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
ochat-types = {workspace = true}
ochat-common = {workspace = true}
open = "5.3.2"
iced_split = "0.1.0"
voice_activity_detector = {version ="^0.1.0", features = ["async"], optional = true}
cpal = {version = "0.17.0", optional = true}
