[package]
name = "ochat-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Types used between ochat packages and binaries."
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
derive_builder = "0.20.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
